Fixed a problem with dialog close buttons not aligning correctly in WP 3.6

--- a/products/photocrati_nextgen/modules/nextgen_admin/static/jquery-ui/jquery-ui-1.9.1.custom.css
+++ b/products/photocrati_nextgen/modules/nextgen_admin/static/jquery-ui/jquery-ui-1.9.1.custom.css
@@ -570,7 +570,7 @@ button.ui-button::-moz-focus-inner {
 
 .ui-dialog .ui-dialog-titlebar-close span {
     display: block;
-    margin: 1px;
+    /*margin: 1px; -- breaks WP 3.6 */
 }
 
 .ui-dialog .ui-dialog-titlebar-close:hover, .ui-dialog .ui-dialog-titlebar-close:focus {
